# game_server/models/move.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from game_server.models.base_model_ import Model
+from game_server import util
+
+
+class Move(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, from_room=None, to_room=None):  # noqa: E501
+        """Move - a model defined in OpenAPI
+
+        :param from_room: The from_room of this Move.  # noqa: E501
+        :type from_room: int
+        :param to_room: The to_room of this Move.  # noqa: E501
+        :type to_room: int
+        """
+        self.openapi_types = {
+            'from_room': int,
+            'to_room': int
+        }
+
+        self.attribute_map = {
+            'from_room': 'from_room',
+            'to_room': 'to_room'
+        }
+
+        self._from_room = from_room
+        self._to_room = to_room
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Move':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Move of this Move.  # noqa: E501
+        :rtype: Move
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def from_room(self):
+        """Gets the from_room of this Move.
+
+
+        :return: The from_room of this Move.
+        :rtype: int
+        """
+        return self._from_room
+
+    @from_room.setter
+    def from_room(self, from_room):
+        """Sets the from_room of this Move.
+
+
+        :param from_room: The from_room of this Move.
+        :type from_room: int
+        """
+
+        self._from_room = from_room
+
+    @property
+    def to_room(self):
+        """Gets the to_room of this Move.
+
+
+        :return: The to_room of this Move.
+        :rtype: int
+        """
+        return self._to_room
+
+    @to_room.setter
+    def to_room(self, to_room):
+        """Sets the to_room of this Move.
+
+
+        :param to_room: The to_room of this Move.
+        :type to_room: int
+        """
+
+        self._to_room = to_room
